# cognigraph

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  eval_report_20260707_022756.json  init.py  langgraph_flow.py  main.py  pyproject.toml  requirements.txt
agents/: planner.py  retriever.py  summarizer.py
config/: model_settings.yaml
eval/: eval_dataset.py  evaluate.py  metrics.py
interface/: cli.py
memory/: memory.py
